[gd_scene load_steps=9 format=3 uid="uid://c0h0ogq80awpj"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_tx8y8"]
[ext_resource type="PackedScene" uid="uid://bkg0ecsjh14v4" path="res://scenes/levels/level_04.tscn" id="2_pkl0y"]
[ext_resource type="PackedScene" uid="uid://2ecttgwt8mmi" path="res://scenes/player/player.tscn" id="2_s7u2v"]
[ext_resource type="PackedScene" uid="uid://cal42ude5ppt8" path="res://scenes/wall.tscn" id="3_tlx7a"]
[ext_resource type="PackedScene" uid="uid://cbigq4rmrbr4o" path="res://scenes/coin.tscn" id="4_65rue"]
[ext_resource type="PackedScene" uid="uid://dglpt6aqsx42k" path="res://scenes/enemy.tscn" id="5_fdff8"]
[ext_resource type="PackedScene" uid="uid://dr5sw32m5xnnx" path="res://scenes/ui/pause_screen.tscn" id="5_no7rd"]
[ext_resource type="PackedScene" uid="uid://dgmd17e2fubkg" path="res://scenes/ui/pause_settings_screen.tscn" id="6_cxhy8"]

[node name="Level03" type="Node2D"]
position = Vector2(-8, -8)
script = ExtResource("1_tx8y8")
next_level = ExtResource("2_pkl0y")

[node name="Background" type="ColorRect" parent="."]
offset_left = -56.0
offset_top = -64.0
offset_right = 1256.0
offset_bottom = 720.0
color = Color(0.105882, 0.160784, 0.380392, 1)

[node name="Player" parent="." instance=ExtResource("2_s7u2v")]
position = Vector2(584, 552)

[node name="Walls" type="Node" parent="."]

[node name="OuterWallBottom" type="Node2D" parent="Walls"]
position = Vector2(712, 636)
rotation = 1.5708

[node name="Wall12" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 644)

[node name="Wall13" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 584)

[node name="Wall14" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 520)

[node name="Wall15" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 456)

[node name="Wall58" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-419.999, 328.001)

[node name="Wall59" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-483.999, 328.002)

[node name="Wall46" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-484, -55.9982)

[node name="Wall51" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-420, -55.9985)

[node name="Wall16" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 392)

[node name="Wall17" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 328)

[node name="Wall18" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 264)

[node name="Wall19" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 200)

[node name="Wall20" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 136)

[node name="Wall21" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 72)

[node name="Wall22" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 8)

[node name="Wall23" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-2.79753e-06, -56)

[node name="Wall24" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-5.59506e-06, -120)

[node name="Wall31" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-124, -55.9995)

[node name="Wall39" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-124, -120)

[node name="Wall42" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-123.999, 328)

[node name="Wall43" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-123.999, 264)

[node name="Wall40" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-260, -55.9991)

[node name="Wall50" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-380, -55.9986)

[node name="Wall52" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-524, -55.9981)

[node name="Wall41" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-260, -119.999)

[node name="Wall44" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-259.999, 328.001)

[node name="Wall45" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-259.999, 264.001)

[node name="Wall56" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-379.999, 328.001)

[node name="Wall57" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-379.999, 264.001)

[node name="Wall60" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-515.999, 328.002)

[node name="Wall61" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-515.999, 264.002)

[node name="Wall25" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-8.39259e-06, -184)

[node name="Wall26" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-1.11901e-05, -248)

[node name="Wall27" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-1.39876e-05, -312)

[node name="Wall28" parent="Walls/OuterWallBottom" instance=ExtResource("3_tlx7a")]
position = Vector2(-1.67852e-05, -376)

[node name="OuterWallTop" type="Node2D" parent="Walls"]
position = Vector2(712, 0)
rotation = 1.5708

[node name="Wall12" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 644)

[node name="Wall13" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 584)

[node name="Wall14" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 520)

[node name="Wall15" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 456)

[node name="Wall16" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 392)

[node name="Wall17" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 328)

[node name="Wall18" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 264)

[node name="Wall19" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 200)

[node name="Wall20" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 136)

[node name="Wall21" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 72)

[node name="Wall22" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 8)

[node name="Wall23" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(-2.79753e-06, -56)

[node name="Wall24" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(-5.59506e-06, -120)

[node name="Wall25" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(-8.39259e-06, -184)

[node name="Wall26" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(-1.11901e-05, -248)

[node name="Wall27" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(-1.39876e-05, -312)

[node name="Wall28" parent="Walls/OuterWallTop" instance=ExtResource("3_tlx7a")]
position = Vector2(-1.67852e-05, -376)

[node name="OuterWallLeft" type="Node2D" parent="Walls"]
position = Vector2(8, -8)

[node name="Wall" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 644)

[node name="Wall2" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 584)

[node name="Wall3" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 520)

[node name="Wall4" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 456)

[node name="Wall5" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 392)

[node name="Wall6" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 328)

[node name="Wall7" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 264)

[node name="Wall8" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 200)

[node name="Wall9" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 136)

[node name="Wall10" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 72)

[node name="Wall11" parent="Walls/OuterWallLeft" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 8)

[node name="OuterWallRight" type="Node2D" parent="Walls"]
position = Vector2(1152, -8)

[node name="Wall" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 644)

[node name="Wall2" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 584)

[node name="Wall3" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 520)

[node name="Wall12" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-448, 584)

[node name="Wall18" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-704, 584)

[node name="Wall13" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-448, 520)

[node name="Wall17" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-832, 520)

[node name="Wall16" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-448, 384)

[node name="Wall21" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-832, 384)

[node name="Wall4" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 456)

[node name="Wall14" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-320, 480)

[node name="Wall15" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-320, 432)

[node name="Wall19" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-832, 480)

[node name="Wall20" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-832, 432)

[node name="Wall5" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 392)

[node name="Wall6" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 328)

[node name="Wall7" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 264)

[node name="Wall22" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-448, 328)

[node name="Wall24" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-704, 328)

[node name="Wall23" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-448, 264)

[node name="Wall25" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-448, 120)

[node name="Wall26" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-448, 64)

[node name="Wall27" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(-704, 64)

[node name="Wall8" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 200)

[node name="Wall9" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 136)

[node name="Wall10" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 72)

[node name="Wall11" parent="Walls/OuterWallRight" instance=ExtResource("3_tlx7a")]
position = Vector2(0, 8)

[node name="UI" type="CanvasLayer" parent="."]

[node name="CoinsLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_right = 136.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 28
text = "Coins: 0"

[node name="AmmoLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 32.0
offset_right = 153.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 28
text = "Ammo: 5"

[node name="LevelLabel" type="Label" parent="UI"]
offset_left = 1020.0
offset_right = 1136.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 28
text = "Level: 1"

[node name="DeathLabel" type="Label" parent="UI"]
offset_left = 992.0
offset_top = 36.0
offset_right = 1136.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 28
text = "Deaths: 0"

[node name="PauseScreen" parent="UI" instance=ExtResource("5_no7rd")]

[node name="PauseSettingsScreen" parent="UI" instance=ExtResource("6_cxhy8")]

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(576, 444)

[node name="Coin6" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(387, 444)

[node name="Coin8" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(447, 185)

[node name="Coin5" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(766, 444)

[node name="Coin7" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(701, 185)

[node name="Coin2" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(576, 388)

[node name="Coin3" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(576, 324)

[node name="Coin4" parent="Coins" instance=ExtResource("4_65rue")]
position = Vector2(576, 260)

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("5_fdff8")]
position = Vector2(386, 442)
patrol_distance = 380.0

[node name="Enemy2" parent="Enemies" instance=ExtResource("5_fdff8")]
position = Vector2(704, 182)
patrol_distance = 260.0
